k8s-yamls-master/k8s-yamls-master/live/lab/postgres/pg3-parules/1-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pg3-parules.pg3-parules.tcp5432
  namespace: pas-dev
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: pg3-parules
    ports:
    - port: 5432
      protocol: TCP
  podSelector:
    matchLabels:
      app: pg3-parules
  policyTypes:
  - Ingress
